samples/ip6tables-save-after.txt
# Generated by ip6tables-save v1.8.9 on Tue May 19 09:00:00 2026
*filter
:INPUT DROP [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:WEB6 - [0:0]
-A INPUT -i lo -j ACCEPT
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p ipv6-icmp -j ACCEPT
-A INPUT -p tcp -m tcp --dport 22 -m limit --limit 5/min -j ACCEPT
-A INPUT -p tcp -m tcp --dport 80 -j WEB6
-A INPUT -p tcp -m tcp --dport 443 -j WEB6
-A INPUT -s fe80::/10 -j ACCEPT
-A INPUT -d ff02::/16 -j ACCEPT
-A INPUT -j LOG --log-prefix "DROP-INPUT6: "
-A INPUT -j DROP
-A WEB6 -m conntrack --ctstate NEW -j ACCEPT
COMMIT
